--- a/E-Commerce App/Backend/package.json
+++ b/E-Commerce App/Backend/package.json
@@ -8,7 +8,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "server": "nodemon server.js"
+    "server": "nodemon server.js",
+    "build": "npm run build"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
