--- a/Hotel Booking/Server/package.json
+++ b/Hotel Booking/Server/package.json
@@ -19,6 +19,8 @@
     "express": "^5.1.0",
     "mongoose": "^8.15.1",
     "multer": "^2.0.0",
+    "nodemailer": "^7.0.3",
+    "stripe": "^18.2.1",
     "svix": "^1.66.0"
   },
   "devDependencies": {
