--- a/Streamify/Frontend/package.json
+++ b/Streamify/Frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stream-io/video-react-sdk": "^1.18.11",
     "@tanstack/react-query": "^5.81.5",
     "axios": "^1.10.0",
     "lucide-react": "^0.525.0",
@@ -19,6 +20,7 @@
     "react-router": "^7.6.3",
     "stream-chat": "^9.10.1",
     "stream-chat-react": "^13.2.1",
+    "streamify": "file:..",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
